--- a/support/static/ngTemplates/app.customers.explore.html
+++ b/support/static/ngTemplates/app.customers.explore.html
@@ -7,6 +7,7 @@
         <span class="text-muted" style="font-size:18px;">{{data.pk | getName }}</span> <br><br>
       </div>
       <button type="button" class="btn btn-primary" ng-click="getToken()">Generate</button>
+    <button type="button" class="btn btn-primary" ng-click="createData()">Create</button>
     </div>
   </div>
   <div class="col-md-9">
