--- a/warehouse/static/ngTemplates/app.warehouse.default.html
+++ b/warehouse/static/ngTemplates/app.warehouse.default.html
@@ -49,29 +49,49 @@
     </div>
     <div class="row" style="margin:20px">
       <button type="button" class="btn btn-default bgn-lg pull-right" ng-click="send()">
-      <i class="fa fa-plus"></i>  Generate
+        <i class="fa fa-plus"></i> Generate
       </button>
     </div>
     <div class="row" style="margin:20px" ng-if="invData.length==0">
-      <span class="text-center text-muted"><h2>No Invoices...</h2><br></span>
+      <span class="text-center text-muted">
+        <h2>No Invoices...</h2><br>
+      </span>
     </div>
     <div class="row" style="margin:20px" ng-if="invData.length>0">
-      <span class="text-center"><h3>Invoices</h3><br></span>
+      <span class="text-center">
+        <h3>Invoices</h3><br>
+      </span>
       <table class="table table-striped">
         <tbody>
           <tr>
             <th>Invoice No.</th>
             <th>Company Name</th>
-            <th>Billing Date</th>
-            <th>Due Date</th>
-            <!-- <th>Status.</th> -->
+            <th>From Date</th>
+            <th>To Date</th>
+            <th>Status</th>
+            <th>Down;oad</th>
+
           </tr>
-          <tr ng-repeat="i in invData">
+          <tr ng-repeat="i in invoiceData">
             <td>{{i.pk}}</td>
-            <td>{{i.contract__company__name}}</td>
-            <td>{{i.billedDate | date : 'dd-MMM-yyyy'}}</td>
-            <td>{{i.dueDate | date : 'dd-MMM-yyyy'}}</td>
-            <!-- <td>{{i.status | humanize}}
+            <td>{{i.company.name}}</td>
+            <td>
+              <div class="input-group" >
+                <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="logger.when" is-open="start.opened" />
+                <span class="input-group-btn">
+                  <button type="button" class="btn btn-default" ng-click="start.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
+                </span>
+              </div>
+            </td>
+            <td>
+              <div class="input-group" >
+                <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="logger.when" is-open="end.opened" />
+                <span class="input-group-btn">
+                  <button type="button" class="btn btn-default" ng-click="end.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
+                </span>
+              </div>
+            </td>
+            <td>{{i.status | humanize}}
               <div class="btn-group btn-group-sm pull-right">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                   Change status <span class="caret"></span></button>
@@ -84,7 +104,8 @@
                   <li><a href="" ng-click="changeStatus('dueElapsed', $index)">Due Elapsed</a></li>
                 </ul>
               </div>
-            </td> -->
+            </td>
+            <td><a class="btn btn-primary" href="/api/warehouse/downloadMonthlyInvoice/?valPK={{i.pk}}"> <i class = "fa fa-download"></i> </a> </td>
           </tr>
         </tbody>
       </table>
