--- a/warehouse/static/ngTemplates/app.warehouse.contact.form.html
+++ b/warehouse/static/ngTemplates/app.warehouse.contact.form.html
@@ -72,10 +72,10 @@
         <label>PAN No.</label>
         <input type="text " class="form-control" ng-model="form.company.pan">
       </div>
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label>State Code</label>
         <input type="text " class="form-control" ng-model="form.company.statecode">
-      </div>
+      </div> -->
       <div style="cursor:pointer;margin:20px;" ng-click="companyAdvanceOptions = !companyAdvanceOptions">
         <div class="text-primary">
           <i class="fa fa-lg fa-sort-{{companyAdvanceOptions? 'up':'desc'}}" style="margin-right:20px;"></i>  Show advance options
