--- a/warehouse/static/ngTemplates/app.warehouse.default.html
+++ b/warehouse/static/ngTemplates/app.warehouse.default.html
@@ -69,7 +69,8 @@
             <th>From Date</th>
             <th>To Date</th>
             <!-- <th>Status</th> -->
-            <th>Down;oad</th>
+            <th>Download</th>
+            <th>Add</th>
 
           </tr>
           <tr ng-repeat="i in invoiceData">
@@ -106,6 +107,7 @@
               </div>
             </td> -->
             <td><a class="btn btn-primary" href="/api/warehouse/downloadMonthlyInvoice/?valPK={{i.pk}}&from={{frmDate.toJSON()}}&to={{toDate.toJSON()}}"> <i class = "fa fa-download"></i> </a> </td>
+            <td><a class="btn btn-default" ng-click=extraData(i.pk,frmDate,toDate)> <i class = "fa fa-plus"></i> </a> </td>
           </tr>
         </tbody>
       </table>
