--- a/support/static/ngTemplates/app.support.html
+++ b/support/static/ngTemplates/app.support.html
@@ -38,6 +38,7 @@
                         <span ng-if="x.name" >{{x.name}}</span>
                         <span ng-if="!x.name" >{{x.uid}}</span>
                         <span ng-if="!x.boxOpen && x.unreadMsg>0" >( {{x.unreadMsg}} )</span>
+                        <span ng-if="x.video"><i class="fa fa-video-camera" aria-hidden="true"></i></span>
                       </div>
                     </div>
                     <div class="col-md-2">
@@ -75,7 +76,7 @@
                       <div class="row">
                         <i class="fa fa-circle" aria-hidden="true" style="color:{{x.isOnline ? '#37a508':'#ff0022'}}"></i><span> {{x.uid}} </span>
                         <span ng-if="x.messages.length>0">( {{x.messages.length}} )</span>
-                        <span><i ng-if="x.type=='videoCall'" class="fa fa-video-camera" aria-hidden="true"></i></span>
+                        <span ng-if="x.video"><i class="fa fa-video-camera" aria-hidden="true"></i></span>
                       </div>
 
                     </div>
