howmuch,price fields added in prod and prod var

--- a/POS/static/ngTemplates/app.POS.product.form.html
+++ b/POS/static/ngTemplates/app.POS.product.form.html
@@ -96,10 +96,18 @@
 
     </div>
     <div class="col-md-4">
+
+      <div class="form-group">
+      <label>How Much</label>
+      <span class="text-muted" ng-if="product.unit">(in {{product.unit}})</span>
+      <input type="text" class="form-control"  ng-model="product.howMuch" >
+    </div>
+
       <div class="form-group">
         <label>Alias</label>
         <input type="text" class="form-control" ng-model="product.alias">
       </div>
+
       <div class="form-group">
         <label>Description</label>
         <textarea class="form-control custom-control" rows="3" ng-model="product.description"></textarea>
@@ -107,7 +115,7 @@
 
       <div class="row" ng-if="product.pk" style="padding:5px 20px">
 
-        <label>Secondary SKU</label>
+        <!-- <label>Secondary SKU</label>
         <div class="row">
           <div class="col-md-8">
             <div class="form-group">
@@ -125,13 +133,52 @@
               </div>
             </div>
           </div>
+        </div> -->
+
+
+        <div class="row">
+          <div class="col-md-6">
+              <label>Secondary SKU</label>
+          </div>
+          <div class="col-md-3" style="padding:0px">
+            <p class="text-muted">Price</p>
+          </div>
+          <div class="col-md-3">
+            <p class="text-muted">Items per pack</p>
+          </div>
         </div>
+
+
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <input type="text" class="form-control" ng-model="productVerientForm.sku" placeholder="product variant...">
+            </div>
+          </div>
+          <div class="col-md-3" style="padding:0px">
+            <div class="form-group">
+              <input type="text" class="form-control" ng-model="productVerientForm.price" placeholder="price..." >
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="input-group">
+              <input type="text" class="form-control" ng-model="productVerientForm.unitPerpack" placeholder="No. of items per pack">
+              <div class="input-group-btn">
+                <button type="button" class="btn btn-primary" ng-click="saveUnits()">Add</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
         <div class="row" style="margin-top: 30px;padding:5px 20px">
           <div class="cards" style="border-left:4px solid #4192cd;box-shadow:0 2px 8px rgba(26,24,20,0.2);margin-top: 15px;" ng-repeat="data in productData">
             <div class="row" style="padding: 15px;min-height:100px;" ng-mouseenter="hover = true;" ng-mouseleave="hover = false;">
               <div class="col-md-12">
                 <span><strong>Secondary SKU:</strong>{{data.sku}}</span><br/>
-                <span><strong>Units / Pack:</strong>{{data.unitPerpack}}</span>
+                <span><strong>Units / Pack:</strong>{{data.unitPerpack}}</span><br/>
+                <span><strong>Price : </strong>{{data.price}}</span>
                 <!-- <a href="{{data.attachment}}" target="_blank" class="btn btn-primary pull-right" > <i class="fa fa-download" ></i></a> -->
                 <button type="button" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="deleteProduct(data.pk , $index)" confirm-button-type="danger" cancel-button-type="default" class="btn-danger btn-sm  pull-right"
                   style="padding-bottom: 9px;"> <i class="fa fa-trash fa-lg"></i> </button>
