--- a/static_shared/ngTemplates/header.html
+++ b/static_shared/ngTemplates/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top animated slideInDown"  style="{{sideMenuVisibility ? 'margin-left:13%;': 'margin-left:5%'}};background:var(--themeMain)">
+<nav class="navbar navbar-default navbar-fixed-top animated slideInDown" id="navbarTop" style="{{sideMenuVisibility ? 'margin-left:13%': 'margin-left:5%;'}};{{mobileView ? 'margin-left:181px':''}};background:var(--themeMain)">
   <div class="container-fluid" style="height:100%;">
     <div class="navbar-header"  style="height: 100%;">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navBar" aria-expanded="false" aria-controls="navbar">
