--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -147,12 +147,17 @@
                     <h5 ng-if="c.product.product.name.length<=30" style="margin:0px;  height:50px;">{{c.product.product.name}}</h5>
                   </div>
                   <div class="col-md-3">
-                    <div class="row container-fluid">
-                      <div class="col-md-6" style="padding-top: 50px;>
-                          <span class=" pull-right "  ng-if="c.product.product.discount>0" > <strike> <i class="fa fa-inr"></i> {{c.product.product.price.toFixed(2)}} </strike> </span>
+                    <div class="row container-fluid" ng-if="c.prodSku==c.product.product.serialNo">
+                      <div class="col-md-6" style="padding-top: 50px;">
+                          <span class="pull-right"  ng-if="c.product.product.discount>0" > <strike> <i class="fa fa-inr"></i> {{c.product.product.price.toFixed(2)}} </strike> </span>
                       </div>
                       <div class="col-md-6" style="padding-top: 50px;">
                         <span><i class="fa fa-inr"></i> {{c.product.product.discountedPrice.toFixed(2)}}</span>
+                      </div>
+                    </div>
+                    <div class="row container-fluid" ng-if="c.prodSku!=c.product.product.serialNo">
+                      <div class="col-md-offset-6 col-md-6" style="padding-top: 50px;">
+                        <span><i class="fa fa-inr"></i> {{c.prodVarPrice.toFixed(2)}}</span>
                       </div>
                     </div>
                   </div>
@@ -165,7 +170,8 @@
                     <button class="btn btn-primary" ng-click="addWishList($index,c.pk)">Add to Wishlist <i class="fa fa-heart"></i></button>
                   </div>
                   <div class="col-md-2" style="padding-top: 50px;padding-left:50px;">
-                    <p> <i class="fa fa-inr"></i> {{(c.product.product.discountedPrice * c.qty).toFixed(2) }} </p>
+                    <p ng-if="c.prodSku==c.product.product.serialNo"> <i class="fa fa-inr"></i> {{(c.product.product.discountedPrice * c.qty).toFixed(2) }} </p>
+                    <p ng-if="c.prodSku!=c.product.product.serialNo"> <i class="fa fa-inr"></i> {{(c.prodVarPrice * c.qty).toFixed(2) }} </p>
                   </div>
                 </div>
               </div>
