--- a/support/static/ngTemplates/app.customers.explore.html
+++ b/support/static/ngTemplates/app.customers.explore.html
@@ -81,6 +81,75 @@
         </canvas
 
       </div>
+      <hr>
+      <div class="row">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-12">
+              <h4> Calls stats <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-1">
+              <img src="/static/images/incommingCall.png" style="width:60px;" alt="">
+            </div>
+
+            <div class="col-md-3">
+              <div class="container-fluid">
+                <img src="/static/images/callStats.png" style="width:100%;" alt="">
+              </div>
+            </div>
+            <div class="col-md-1">
+              <img src="/static/images/outgoingCall.png" style="width:65px;" alt="">
+            </div>
+            <div class="col-md-3">
+              <div class="container-fluid">
+                <img src="/static/images/callStats.png" style="width:100%;" alt="">
+              </div>
+            </div>
+            <div class="col-md-1">
+              <img src="/static/images/missCall.png" style="width:70px;" alt="">
+            </div>
+
+            <div class="col-md-3">
+              <div class="container-fluid">
+                <img src="/static/images/callStats.png" style="width:100%;" alt="">
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+
+
+
+
+
+
+        <!-- <div class="col-md-4" style="padding:25px">
+
+          <div class="row col-md-12">
+            <table class="table" style="font-size:18px">
+              <thead>
+                <tr style="color:#43c8b0">
+                  <th style="border: 0;">Name</th>
+                  <th style="border: 0;">Duration</th>
+                  <th style="border: 0;">Frequency</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr ng-repeat="usr in callsStats">
+                  <td style="border: 0;">{{usr.name}}</td>
+                  <td style="border: 0;">{{usr.duration}}</td>
+                  <td style="border: 0;">{{usr.frequency}}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div> -->
+      </div>
+
+      <hr>
 
       <div class="row">
         <uib-tabset>
