--- a/HR/static/ngTemplates/app.HR.manage.users.items.html
+++ b/HR/static/ngTemplates/app.HR.manage.users.items.html
@@ -32,17 +32,17 @@
       </div>
     </div>
     <div class="row text-center" style="background:#d13548;color:white;">
-      <div class="col-md-8" style="padding:10px;">
+      <div class="col-md-7" style="padding:10px;">
         <div class="col-md-2">
           <span style="cursor:pointer;" ng-click="rowActionClicked('editProfile')">
                 <i class="fa fa-pencil fa-lg" ></i>
               </span>
         </div>
-        <div class="col-md-2">
+        <!-- <div class="col-md-2">
           <span style="cursor:pointer;" ng-click="rowActionClicked('editPayroll')">
                 <i class="fa fa-credit-card fa-lg" ></i>
               </span>
-        </div>
+        </div> -->
         <div class="col-md-2">
           <span style="cursor:pointer;" ng-click="rowActionClicked('editDesignation')">
                 <i class="fa fa-caret-up fa-2x" style="margin-top:-15px;" ></i>
@@ -64,7 +64,7 @@
               </span>
         </div>
       </div>
-      <div class="col-md-4" style="background: rgba(0, 0, 0, 0.2) none repeat scroll 0% 0%;padding:10px;">
+      <div class="col-md-5" style="background: rgba(0, 0, 0, 0.2) none repeat scroll 0% 0%;padding:10px;">
         <span style="cursor:pointer;" ng-click="rowActionClicked('viewProfile')">
             <i class="fa fa-user fa-lg" style="margin-right:15px;"></i> View Profile
           </span>
